--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   charts_flutter_new: ^0.12.0
   cupertino_icons: ^1.0.2
   eva_icons_flutter: ^3.1.0
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
+  firebase_database: ^10.2.3
   flutter:
     sdk: flutter
   loading_animation_widget: ^1.2.0+4
