--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,18 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   charts_flutter_new: ^0.12.0
+  cloud_firestore: ^4.8.2
   cupertino_icons: ^1.0.2
   eva_icons_flutter: ^3.1.0
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
   firebase_database: ^10.2.3
+  firebase_storage: ^11.2.5
   flutter:
     sdk: flutter
   loading_animation_widget: ^1.2.0+4
   provider: ^6.0.5
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
